[package]
name = "tools_rocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
# graphql
juniper = { git = "https://github.com/graphql-rust/juniper" }
# db tools
diesel = { version = "1.4.4", features = ["postgres"] }
# misc server tools
dotenv = "0.15.0"
serde_json = "1.0"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
# coderpad tools
# anyhow = "1.0.32"
# bitflags = "1.2.1"
# chrono = "0.4.18"
# itertools = "0.9.0"
# nom = "5.1.2"
# rand = "0.7.3"
# rayon = "1.4.0"
# reqwest = "0.10.8"
# regex = "1.3.9"
# serde = "1.0.116"
# serde_json = "1.0.57"
# time = "0.2.22"
# url = "2.1.1"
# uuid = "0.8.1"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool"]

[global.databases]
postgres = { url = "postgres://postgres:mysecretpassword@localhost:5432/postgres" }